added HTU21D_publish target

--- a/HTU21D/Makefile
+++ b/HTU21D/Makefile
@@ -3,9 +3,14 @@ CFLAGS=-I. -Wall
 DEPS = 
 OBJ = HTU21D.o HTU21D_test.o
 EXTRA_LIBS=-lwiringPi
+PUB_OBJ = HTU21D.o HTU21D_publish.o
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
+
+HTU21D_publish: $(PUB_OBJ)
+	$(CC) -o $@ $^ $(CFLAGS) $(EXTRA_LIBS)
+
 
 HTU21D_test: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(EXTRA_LIBS)
