added code to publish to MQTT

--- a/HTU21D/Makefile
+++ b/HTU21D/Makefile
@@ -3,14 +3,13 @@ CFLAGS=-I. -Wall
 DEPS = 
 OBJ = HTU21D.o HTU21D_test.o
 EXTRA_LIBS=-lwiringPi
-PUB_OBJ = HTU21D.o HTU21D_publish.o
+PUB_OBJ = HTU21D.o HTU21D_publish.o paho_MQTT.o
 
 %.o: %.c $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 HTU21D_publish: $(PUB_OBJ)
-	$(CC) -o $@ $^ $(CFLAGS) $(EXTRA_LIBS)
-
+	$(CC) -o $@ $^ $(CFLAGS) $(EXTRA_LIBS) -lpaho-mqtt3c
 
 HTU21D_test: $(OBJ)
 	$(CC) -o $@ $^ $(CFLAGS) $(EXTRA_LIBS)
