--- a/DS18B20/freezer_pwr.service
+++ b/DS18B20/freezer_pwr.service
@@ -1,6 +1,6 @@
 [Service]
-WorkingDirectory=/home/hbarta/freezer
-ExecStart=/home/hbarta/bin/frmn.py
+WorkingDirectory=/home/hbarta/freezer_pwr
+ExecStart=/home/hbarta/bin/frmn.py  -n TPplug04
 Restart=always
 StandardOutput=syslog
 StandardError=syslog
